--- a/styles/components/title-section.css
+++ b/styles/components/title-section.css
@@ -1,12 +1,32 @@
-.title {
-  width: 100%;
-  height: 100vh;
-  text-align: center;
+.break h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
-  position: relative;
-  margin-bottom: 2rem;
+}
+
+.break {
+  text-align: center;
+  height: 100vh;
+  padding: 2rem;
+}
+
+/* .about {
+  padding: 2rem;
+  margin: auto;
+  text-align: center;
+  color: white;
+  background-color: black;
+} */
+
+.about {
+  width: 80%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: auto;
+  justify-content: space-between;
+}
+
+
+.about div {
+  margin-top: 2rem;
+  width: 40%;
+  text-align: justify;
 }
